2008-12-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/check/pipelines/theoraenc.c: (GST_START_TEST):
	Pushing 10 buffers is enough to run the test.

2008-12-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/examples/seek/seek.c: (do_seek), (stop_cb),
	(skip_toggle_cb), (rate_spinbutton_changed_cb), (msg_segment_done),
	(main):
	Hook up the SKIP seek flag.

2008-12-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaybin2.c: (pad_added_cb):
	Error out with a missing-plugin error when the input-selector was not
	found.

	* gst/playback/gstplaysink.c: (gst_play_sink_reconfigure):
	Indentation.

2008-12-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/playback/gstplaysink.c: (gst_play_sink_class_init),
	(gst_play_sink_dispose), (gst_play_sink_finalize), (try_element),
	(gen_video_chain), (gen_audio_chain), (gst_play_sink_reconfigure),
	(gst_play_sink_send_event), (gst_play_sink_change_state):
	Use G_DEFINE_TYPE.
	Try to set the selected sink to READY before using it. This will allow
	for detection of incompatible formats sooner.
	Don't cause a fatal error when conversion elements are missing but post
	a missing-element message and a warning instead because things might
	still link and run fine.
	Simplyfy the construction of audio and video sink chains.

2008-12-10  Wim Taymans  <wim.taymans@collabora.co.uk>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_class_init),
	(gst_ogg_pad_dispose), (gst_ogg_pad_finalize):
	Use G_DEFINE_TYPE for the OggPad to get some threadsafe type 
	init from glib.

2008-12-10  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Luis Menina <liberforce at freeside dot fr>

	* gst-libs/gst/floatcast/floatcast.h:
	* gst/typefind/gsttypefindfunctions.c:
	Include glib.h instead of a specific GLib header. Including single
	GLib headers is deprecated. Fixes bug #563904.

2008-12-09  Julien Moutte  <julien@fluendo.com>

	* gst-libs/gst/riff/riff-media.c: (gst_riff_create_audio_caps): 